Fix #5 - Fix sidebar overflow

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   max-height: 100vh;
   opacity: 1;
   transition: 500ms;
+  overflow: auto;
 }
 
 .sidebar {
@@ -29,6 +30,8 @@ body {
   backdrop-filter: blur(25px);
   padding: 50px;
   color: #fff;
+  height: calc(100vh - 50px);
+  overflow-y: auto;
 }
 
 #locationInput {
